--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Calendar</title>
     <link rel="stylesheet" href="src/css/semantic-ui.css" />
-    <link rel="stylesheet" href="src/css/style.css" />
+    <style>.padding-vert-lg{padding-top:2rem!important;padding-bottom:2rem!important}.blink182{animation:3s linear infinite allTheSmallThings}@keyframes allTheSmallThings{0%{background:#006}8%{background:#75006d}17%{background:#b8005f}25%{background:#ea1a4b}33%{background:#ff692e}42%{background:#fa0}50%{background:#ffea00}58%{background:#fa0}67%{background:#ff692e}75%{background:#ea1a4b}83%{background:#b8005f}92%{background:#75006d}to{background:#006}}</style>
   </head>
   <body>
     <h1 class="ui centered header">Calendar</h1>
