--- a/index.html
+++ b/index.html
@@ -4,62 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Calendar</title>
-    <link rel="stylesheet" href="src/css/semantic-ui.css" />
-    <style>
-      .padding-vert-lg {
-        padding-top: 2rem !important;
-        padding-bottom: 2rem !important;
-      }
-      .blink182 {
-        animation: 3s linear infinite allTheSmallThings;
-      }
-      @keyframes allTheSmallThings {
-        0% {
-          background: #006;
-        }
-        8% {
-          background: #75006d;
-        }
-        17% {
-          background: #b8005f;
-        }
-        25% {
-          background: #ea1a4b;
-        }
-        33% {
-          background: #ff692e;
-        }
-        42% {
-          background: #fa0;
-        }
-        50% {
-          background: #ffea00;
-        }
-        58% {
-          background: #fa0;
-        }
-        67% {
-          background: #ff692e;
-        }
-        75% {
-          background: #ea1a4b;
-        }
-        83% {
-          background: #b8005f;
-        }
-        92% {
-          background: #75006d;
-        }
-        to {
-          background: #006;
-        }
-      }
-    </style>
+    <style>*,:before,:after{box-sizing:inherit}html{box-sizing:border-box;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;font-size:100%;line-height:1.15}html,body{height:100%}::-webkit-selection{color:#000000de;background-color:#cce2ff}::selection{color:#000000de;background-color:#cce2ff}body{color:#000000de;font-smoothing:antialiased;background:#fff;margin:0;padding:0;font-family:Helvetica Neue,Arial,Helvetica,sans-serif;font-size:1rem;line-height:1.5;overflow-x:hidden}.site-heading{color:#000000de;text-align:center;margin:0 0 1rem;padding:0;font-size:2rem;font-weight:700;line-height:1.25}.site-table{box-shadow:none;text-align:center;color:#000000de;border-collapse:separate;border-spacing:0;background:#fff;border:1px solid #22242626;width:100%;margin:1rem 0 0;font-size:.875rem}.site-table thead th{cursor:auto;vertical-align:inherit;background:#f9fafb;border-bottom:1px solid #2224261a;border-left:1px solid #2224261a;font-weight:700}.site-table thead tr>th:first-child{border-left:none}.site-table tr td{border-top:1px solid #2224261a;border-left:1px solid #2224261a}.site-table tr:first-child td{border-top:none}.site-table th,.site-table td{padding:.7rem}.table-scroll{overflow-x:auto}.blink182{animation:3s linear infinite allTheSmallThings}@keyframes allTheSmallThings{0%{background:#006}8%{background:#75006d}17%{background:#b8005f}25%{background:#ea1a4b}33%{background:#ff692e}42%{background:#fa0}50%{background:#ffea00}58%{background:#fa0}67%{background:#ff692e}75%{background:#ea1a4b}83%{background:#b8005f}92%{background:#75006d}to{background:#006}}</style>
   </head>
   <body>
     <h1 class="site-heading">Calendar</h1>
     <div class="table-scroll">
-      <table class="ui table site-table"></table>
+      <table class="site-table"></table>
     </div>
     <script src="src/app.ts" type="module"></script>
   </body>
