--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div class="table-scroll">
       <table class="site-table"></table>
     </div>
-    <script src="src/app.ts" type="module"></script>
+    <script src="src/app.js" type="module"></script>
   </body>
 </html>
