add midnight refresher

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1 class="site-heading">Calendar</h1>
     <div class="table-scroll">
-      <table class="site-table"></table>
+      <table class="site-table" aria-label="Calendar for the Bhuddist era year"></table>
     </div>
     <script src="src/app.js" type="module"></script>
   </body>
